# SoftwarePT

./: CMakeLists.txt  EntryCounter.cpp  EntryCounter.h  SyllableReader.cpp  SyllableReader.h  main  main.cpp  reader  reader.cpp
